# kneipenquiz3000

./: .gitignore  LICENSE  MANIFEST.in  README.md  data.json  package-lock.json  setup.cfg
frontend/: .env
frontend/public/: index.html
frontend/src/: App.js  config.js  hooks.js  index.css  renderer.js  seats.js
src/: App.js  data.json  hooks.js  index.css
src/kneipenquiz3000/: __main__.py  commands.py  logs.py  main.py  server.py  states.py
src/kneipenquiz3000/frontend/: asset-manifest.json  index.html
src/kneipenquiz3000/frontend/static/css/: main.70d38439.css  main.70d38439.css.map
src/kneipenquiz3000/frontend/static/js/: main.d4f5e668.js  main.d4f5e668.js.map
src/kneipenquiz3000/kneipenquiz3000.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
