[metadata]
name = kneipenquiz3000
version = attr: kneipenquiz3000.__version__
author = baldulin
author_email = baldulin@systemli.org
description = A simple quiz application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/baldulin/quiz
project_urls =
    Bug Tracker = https://github.com/baldulin/quiz
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
include_package_data = True
install_requires =
    ackermann
    aiohttp
    aioconsole
    aiohttp_cors

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kneipenquiz3000 = kneipenquiz3000.main:run_tool
